- build: code clean up